[project]
name = "irc-sept-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ai4water>=1.6",
    "geopandas>=1.1.1",
    "h5netcdf>=1.6.4",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "numpy==2.2",
    "pandas>=2.2.3",
    "pyarrow>=21.0.0",
    "requests>=2.32.5",
    "scipy>=1.16.2",
    "xarray>=2025.9.0",
]
